# DeepStreamXTao

./: Deepstream-installation copy.md  Deepstream-installation copy.txt  Deepstream-installation.md  Deepstream-python-binding-installation.md  README.md  Tao-installation.md  tao-installation.md
deepstream-python/: main.py
deepstream-service-maker-cpp/: CMakeLists.txt  deepstream.cpp
